new: add tags for genre and events
